将所有网络包进行分类整理。